--- a/res/values-sq/strings.xml
+++ b/res/values-sq/strings.xml
@@ -231,6 +231,8 @@
   <string name="ConversationListItem_key_exchange_message">Mesazh shkëmbimi kyçesh</string>
   <!--ConversationListItemAction-->
   <string name="ConversationListItemAction_archived_conversations_d">Biseda të arkivuara (%d)</string>
+  <!--ConversationTitleView-->
+  <string name="ConversationTitleView_verified">U verifikua</string>
   <!--CreateProfileActivity-->
   <string name="CreateProfileActivity_your_profile_info">Të dhëna të profilit tuaj</string>
   <string name="CreateProfileActivity_error_setting_profile_photo">Gabim në caktim fotoje profili</string>
@@ -673,8 +675,6 @@
   <string name="MessageNotifier_reply">Përgjigju</string>
   <string name="MessageNotifier_signal_message">Mesazhe Signal</string>
   <string name="MessageNotifier_unsecured_sms">SMS e pasiguruar</string>
-  <string name="MessageNotifier_pending_signal_messages">Mesazhe Signal pezull</string>
-  <string name="MessageNotifier_you_have_pending_signal_messages">Keni mesazhe Signal pezull, prekeni për t\’ia hapur dhe rimarrë</string>
   <string name="MessageNotifier_contact_message">%1$s %2$s</string>
   <string name="MessageNotifier_unknown_contact_message">Kontakt</string>
   <!--Notification Channels-->
