--- a/res/values-bg/strings.xml
+++ b/res/values-bg/strings.xml
@@ -228,6 +228,8 @@
   <string name="ConversationListItem_key_exchange_message">Съобщение за Изменя на ключожете</string>
   <!--ConversationListItemAction-->
   <string name="ConversationListItemAction_archived_conversations_d">Архивирани разговори (%d)</string>
+  <!--ConversationTitleView-->
+  <string name="ConversationTitleView_verified">Потвърдено</string>
   <!--CreateProfileActivity-->
   <string name="CreateProfileActivity_your_profile_info">Вашият профил</string>
   <string name="CreateProfileActivity_error_setting_profile_photo">Грешка при задаване на профилна снимка</string>
@@ -656,8 +658,6 @@
   <string name="MessageNotifier_reply">Отговори</string>
   <string name="MessageNotifier_signal_message">Signal-ско съобщение</string>
   <string name="MessageNotifier_unsecured_sms">Некриптиран SMS</string>
-  <string name="MessageNotifier_pending_signal_messages">Непрочетени Signal съобщения</string>
-  <string name="MessageNotifier_you_have_pending_signal_messages">Имате непрочетени Signal съобщения, натиснете, за да ги отворите и прегледате</string>
   <string name="MessageNotifier_contact_message">%1$s %2$s</string>
   <string name="MessageNotifier_unknown_contact_message">Контакт</string>
   <!--Notification Channels-->
