--- a/res/values-fi/strings.xml
+++ b/res/values-fi/strings.xml
@@ -231,6 +231,8 @@
   <string name="ConversationListItem_key_exchange_message">Avaintenvaihtoviesti</string>
   <!--ConversationListItemAction-->
   <string name="ConversationListItemAction_archived_conversations_d">Arkistoidut keskustelut (%d)</string>
+  <!--ConversationTitleView-->
+  <string name="ConversationTitleView_verified">Varmennettu</string>
   <!--CreateProfileActivity-->
   <string name="CreateProfileActivity_your_profile_info">Profiilisi tiedot</string>
   <string name="CreateProfileActivity_error_setting_profile_photo">Virhe asetettaessa profiilikuvaa</string>
@@ -671,8 +673,6 @@ Vastaanotetiin avaintenvaihtoviesti, joka kuuluu väärälle protokollaversiolle
   <string name="MessageNotifier_reply">Vastaa</string>
   <string name="MessageNotifier_signal_message">Signal viesti</string>
   <string name="MessageNotifier_unsecured_sms">Salaamaton SMS-viesti</string>
-  <string name="MessageNotifier_pending_signal_messages">Signal-viestejä odottamassa</string>
-  <string name="MessageNotifier_you_have_pending_signal_messages">Sinulle on Signal-viestejä. Avaa ja hae napauttamalla.</string>
   <string name="MessageNotifier_contact_message">%1$s %2$s</string>
   <string name="MessageNotifier_unknown_contact_message">Yhteystieto</string>
   <!--Notification Channels-->
