--- a/res/values-iw/strings.xml
+++ b/res/values-iw/strings.xml
@@ -259,6 +259,8 @@
   <string name="ConversationListItem_key_exchange_message">הודעת החלפת מפתח</string>
   <!--ConversationListItemAction-->
   <string name="ConversationListItemAction_archived_conversations_d">שיחות בארכיון (%d)</string>
+  <!--ConversationTitleView-->
+  <string name="ConversationTitleView_verified">מוודא</string>
   <!--CreateProfileActivity-->
   <string name="CreateProfileActivity_your_profile_info">מידע הפרופיל שלך</string>
   <string name="CreateProfileActivity_error_setting_profile_photo">שגיאה בהגדרת תצלום פרופיל</string>
@@ -711,8 +713,6 @@
   <string name="MessageNotifier_reply">השב</string>
   <string name="MessageNotifier_signal_message">הודעת Signal</string>
   <string name="MessageNotifier_unsecured_sms">מסרון בלתי מאובטח</string>
-  <string name="MessageNotifier_pending_signal_messages">הודעות Signal ממתינות</string>
-  <string name="MessageNotifier_you_have_pending_signal_messages">יש לך הודעות Signal ממתינות, הקש כדי לפתוח ולאחזר אותן</string>
   <string name="MessageNotifier_contact_message">%1$s%2$s</string>
   <string name="MessageNotifier_unknown_contact_message">איש קשר</string>
   <!--Notification Channels-->
